feat: polish session right sidebar
